Refactor de mappers y configuración de Maven Wrapper